src/test/deca/context/valid/avecObjet/test_poly.deca
// Description :
//    Vérifie que l'utilisation de 'this' permet d'accéder au champ malgré le masquage.
//
// Resultats :
//    Ok


class A {
    protected int x ;
    int getX(){
        return x ;
    }
    void setX(int x){
        this.x = x;
    }
}

{ 
    A a = new A();

    a.setX(1) ;
    println("a.getX() = ", a.getX());
}